--- a/index.html
+++ b/index.html
@@ -10,30 +10,46 @@
     <link rel="stylesheet" href="./ccs/debug.css">
     <!-- link reset -->
     <link rel="stylesheet" href="./ccs/reset.css">
-    <!-- link style -->
-    <link rel="stylesheet" href="./ccs/style.css">
+
 
     <!-- link font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    <!-- link style -->
+    <link rel="stylesheet" href="./ccs/style.css">
 
 </head>
 
 <body>
 
     <header>
-        <div>
-            <h1 class="title">ESTATE '24</h1>
-        </div>
+        <h1 class="title p-3">ESTATE '24</h1>
     </header>
     <main>
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
-                <div class="p-5 mb-4 col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <div class="card mb-4">
+                        <div class="position-relative">
+                            <div class="position-absolute top-0 start-50 translate-middle">
+                                <img src="./img/pin.svg" alt="">
+                            </div>
+                        </div>
+                        <img width="100%" src="./img/cork.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
                         <img width="100%" src="./img/cork.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
@@ -42,16 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="p-5 mb-4 col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                    <div class="card">
-                        <img width="100%" src="./img/cork.png" class="card-img-top p-3" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="p-5 mb-4 col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
                         <img width="100%" src="./img/cork.png" class="card-img-top p-2" alt="...">
                         <div class="card-body">
