--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
 
 <body>
 
+    <!-- spazio  -->
     <header>
         <h1 class="title p-3">ESTATE '24</h1>
     </header>
+
+    <!-- Main con le tessere -->
     <main>
         <div class="container mt-5">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+
+                <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                     <div class="card mb-4">
                         <div class="position-relative">
                             <div class="position-absolute top-0 start-50 translate-middle">
@@ -43,31 +47,13 @@
                         </div>
                         <img width="100%" src="./img/cork.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
+                            <p class="card-text">data</p>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                    <div class="card">
-                        <img width="100%" src="./img/cork.png" class="card-img-top p-3" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                    <div class="card">
-                        <img width="100%" src="./img/cork.png" class="card-img-top p-2" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </main>
