--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Photo-blog</title>
 
     <!-- link debug -->
-    <link rel="stylesheet" href="./ccs/debug.css">
+    <!-- <link rel="stylesheet" href="./ccs/debug.css"> -->
     <!-- link reset -->
     <link rel="stylesheet" href="./ccs/reset.css">
 
